--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,43 @@
-# Node.js
+# Dependency directories
 node_modules/
-npm-debug.log
-yarn-debug.log
-yarn-error.log
-package-lock.json
+*/node_modules/
+/.pnp
+.pnp.js
 
-# Environment variables
+# Environment files
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Production build files
+/build
+/dist
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Coverage directory used by tools like istanbul
+coverage
 
 # IDE files
-.vscode/
 .idea/
-*.iml
-*.iws
-*.ipr
+.vscode/
 *.swp
 *.swo
 
 # OS files
 .DS_Store
-Thumbs.db 
+Thumbs.db
+
+# Database
+*.sqlite
+*.sqlite3
+
+# Package files
+package-lock.json 
