--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node frontend-server.js",
-    "dev": "nodemon frontend-server.js"
+    "dev": "nodemon frontend-server.js",
+    "test": "echo \"No tests specified\" && exit 0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
